# fermi-liquid-effective-mass-gaia

./: ANALYSIS.md  README.md  pyproject.toml  references.json
.gaia/: beliefs.json  compile_metadata.json  ir.json  ir_hash
.gaia/inquiry/: state.json  tactics.jsonl
.gaia/inquiry/reviews/: 2026-05-03T14-20-32Z_9862afc2_auto.json  2026-05-03T14-38-11Z_9862afc2_auto.json  2026-05-03T14-45-32Z_0c8dc1a1_auto.json  2026-05-04T03-55-18Z_db40d085_auto.json  2026-05-04T03-57-02Z_db40d085_auto.json  2026-05-04T03-57-38Z_db40d085_auto.json  2026-05-04T03-58-36Z_db40d085_auto.json  2026-05-04T05-12-37Z_2580858f_auto.json
.gaia/manifests/: bridges.json  exports.json  holes.json  premises.json
artifacts/lkm-discovery/: bridge_search_2026-05-03.md  bridge_search_2026-05-04.md  candidates.md  contradictions.md  equivalences.md  extension_loop_100_nodes_2026-05-03.md  mapping_audit.md  merge_audit.md  merge_decisions.todo  semantic_label_audit.md  strict_review_2026-05-03.txt  strict_review_after_duplicate_audit_2026-05-03.txt
artifacts/lkm-discovery/dismissed/: homogeneous_isotropic_vs_rbc_scope.md
artifacts/lkm-discovery/input/: candidate_ids.txt  (+93 more)
docs/: detailed-reasoning.md  starmap.dot  starmap.html
src/fermi_liquid_effective_mass/: __init__.py  cross_paper.py  paper_capone2001.py  paper_friedemann2010.py  paper_friedemann2013.py  paper_friedemann2013_field.py  paper_knebel2006.py  paper_naren2013.py  paper_pfau2013.py  paper_rourke2008.py  paper_schaufuss2008.py  paper_seiro2017.py  paper_shaginyan2009.py  paper_shaginyan2010.py  paper_tokiwa2004.py  priors.py
(+186 files in other folders)
