[project]
name = "fermi-liquid-effective-mass-gaia"
version = "0.1.0"
description = "Combined Gaia knowledge package for two LKM roots on Fermi-liquid effective-mass reasoning."
requires-python = ">=3.12"

[tool.gaia]
type = "knowledge-package"
uuid = "a953846e-ef54-47cc-afb9-26ff44fa872d"
generated_by = "lkm-to-gaia"
generated_from_search = "Fermi liquid effective mass"
generated_from_roots = ["gcn_800070efac5e476d", "gcn_2741cdef209a457a"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fermi_liquid_effective_mass"]
