[project]
name = "fermi-liquid-effective-mass-gaia"
version = "0.1.0"
description = "Combined Gaia knowledge package for LKM roots on Fermi-liquid effective-mass, Brinkman-Rice, and correlated-FL reasoning."
requires-python = ">=3.12"

[tool.gaia]
type = "knowledge-package"
uuid = "a953846e-ef54-47cc-afb9-26ff44fa872d"
generated_by = "lkm-to-gaia"
generated_from_search = "Fermi liquid effective mass"
generated_from_roots = [
    "gcn_800070efac5e476d",
    "gcn_2741cdef209a457a",
    "gcn_42a4ff7fd004413f",
    "gcn_c38f8ce989fd454a",
    "gcn_2b8dd97abcb44d53",
    "gcn_7ae79f122f1c4fcb",
    "gcn_e4ecd721edd14d3f",
    "gcn_29401e4284574aa2",
    "gcn_bc46d7d5f5284a0e",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fermi_liquid_effective_mass"]
